<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/landlordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/landlordName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/rentalEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/rentalAddress" >
    </EditText>

    <EditText
        android:id="@+id/renterEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/renterName" >
    </EditText>

    <Button
        android:id="@+id/rental"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rental" />

</LinearLayout>