<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tasktypes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp" >

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/taskType" />

    <TextView
        android:id="@+id/inspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/gross" />

    <TextView
        android:id="@+id/inspected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="right"
        android:text="@string/accomplishment" />

</LinearLayout>