<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <TextView
        android:id="@+id/setIPtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/setIPtitle"
        android:textColor="@color/liteBlue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/divider1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/setIPtitle"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/liteBlue" />

    <EditText
        android:id="@+id/setIPedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider1"
        android:layout_margin="15dp"
        android:hint="@string/hintIP" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/divider2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/setIPedit"
        android:background="@color/topbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:divider="@color/topbar" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/topbar" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/confirm"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>